  `node`, is now visible by default and has been trimmed to only include
  `node['id']` and `node['name']`. In order to get all information a join query
  can be used with `sys.nodes`.

Changes
=======

- Fixed path of logfile name in rotation pattern in ``log4j2.properties``. It
  now writes into the correct logging directory instead of the parent
  directory.

- Changed primary key constraint of the ``information_schema.table_partitions``
  table to ``(TABLE_SCHEMA, TABLE_NAME, PARTITION_IDENT)`` for SQL compliance.

- Changed primary key constraint of the ``information_schema.key_column_usage``
  table to ``(CONSTRAINT_CATALOG, CONSTRAINT_SCHEMA, CONSTRAINT_NAME,
  COLUMN_NAME)`` for SQL standard compliance.

- Changed primary key constraint of the ``information_schema.columns`` table to
  ``(TABLE_CATALOG, TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME)`` for SQL standard
  compliance.

- Changed primary key of the ``information_schema.tables`` table to
  ``(TABLE_CATALOG, TABLE_SCHEMA, TABLE_NAME)`` for SQL standard conformity.

- Added support for views which can be created using the new ``CREATE VIEW``
  statement and dropped using the ``DROP VIEW`` statement. Views are listed in
  ``information_schema.views`` and they show up in
  ``information_schema.tables`` as well as ``information_schema.columns``

- Arrays can now contain mixed types if they're safely convertible. JSON
  libraries tend to encode values like ``[ 0.0, 1.2]`` as ``[ 0, 1.2 ]``, this
  caused an error because of the strict type match we enforced before.

- DEPRECATED: The ``ON DUPLICATE KEY UPDATE`` clause has been deprecated in
  favor of the ``ON CONFLICT DO UPDATE SET`` clause.

- Added support for ON CONFLICT clause in insert statements.
  ``INSERT INTO ... ON CONFLICT (pk_col) DO UPDATE SET col = val`` is identical
  to ``INSERT INTO ... ON DUPLICATE KEY UPDATE col = val``.
  The special EXCLUDED table can be used to refer to the insert values: